--- a/resources/js/Pages/ProductListPage.scss
+++ b/resources/js/Pages/ProductListPage.scss
@@ -2,9 +2,6 @@
 
 .catalog-page {
   margin: -1.5rem -1rem 0;
-  min-width: 0;
-  max-width: 100%;
-  overflow-x: clip;
 }
 
 .page-container {
